# Vision2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: CheapUSBCam.xml  MicrosoftLifeCam.xml  RoboticsRoomThresh.xml  left.xml  right.xml  stereo.xml
lib/: CMakeLists.txt
lib/include/rbv/: Camera.hpp  HSVThreshold.hpp  ShapeDetection.hpp  StereoPair.hpp  Threshold.hpp
lib/include/rvb/: Camera.hpp  StereoPair.hpp  Threshold.hpp
lib/src/: Camera.cpp  HSVThreshold.cpp  ShapeDetection.cpp  StereoPair.cpp  Threshold.cpp
main/: CMakeLists.txt  hub.cpp
tools/: CMakeLists.txt  calibrateCamera.cpp  calibrateStereo.cpp  calibrationViewer.cpp  cameraCalibration.cpp  cameraSettings.cpp  circleDetection.cpp  hsvTunning.cpp  networkTest.cpp  rectDetection.cpp
